--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(.com)# False\n"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\"\n",
+    "                            )# False\n"
    ]
   },
   {
