Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "'www.'+'vandelay.com' # 'www.vandelay.com'\n"
+    "'www.'+'vande''l\".Upperay.com' # 'www.vandelay.com'\n"
    ]
   },
   {
