--- a/index.ipynb
+++ b/index.ipynb
@@ -232,14 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-3b4b9d61eef3>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3b4b9d61eef3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'www.'+'vande''l\".Upper()+'ay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "'www.'+'vande''l\".Upperay.com' # 'www.vandelay.com'\n"
+    "'www.'+'vande''l\".Upper()+'ay.com' # 'www.vandelay.com'\n"
    ]
   },
   {
