Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "'www.'+'vande''l\".Upper()+'ay.com' # 'www.vandelay.com'\n"
+    "\"www.\"\"+'vande''l\".Upper()+'ay.com' # 'www.vandelay.com'\n"
    ]
   },
   {
