--- a/index.ipynb
+++ b/index.ipynb
@@ -232,22 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-3b4b9d61eef3>, line 1)",
+     "evalue": "EOL while scanning string literal (<ipython-input-10-f54f20783a7f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-3b4b9d61eef3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'www.'+'vande''l\".Upper()+'ay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-f54f20783a7f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"www.\" + \"vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
-    "\"www.\"+ \"vandelay.com' # 'www.vandelay.com'"
+    "\"www.\" + \"vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
