--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "\"www.\" + \"vandelay.com' # 'www.vandelay.com'"
+    "\"www.\" + \"vandelay.com\" # 'www.vandelay.com'"
    ]
   },
   {
